# Planora

apps/api/: pyproject.toml  requirements.txt
apps/api/scripts/: mypy_backend.py
apps/api/tests/: test_eval_tiers.py
