[project]
name = "ai-travel-planner"
version = "0.1.0"
description = "Multi-agent system that turns a short travel request into a complete day-by-day itinerary."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Multi-agentic-system" }]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*"]

# ---------------------------------------------------------------------
# Ruff - linting + formatting (replaces flake8 + isort + black)
# ---------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "../web",
    "../../packages/**/.venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length (formatter handles it)
    "B008", # function call in default arg (FastAPI Depends idiom)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # assert statements OK in tests
"app/schemas/**" = ["UP007"] # keep Optional[X] for clearer schemas

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------
# Mypy - static type checking
# ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = [
    "build/",
    "dist/",
    "tests/fixtures/",
]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "chromadb.*",
    "tavily.*",
    "respx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app_platform.*",
    "memory.*",
    "orchestrator.*",
    "reliability.*",
    "tools.*",
    "domain_contracts.*",
    "agents.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
    "../../packages/platform/tests",
    "../../packages/domain_contracts/tests",
    "../../packages/orchestrator/tests",
    "../../packages/tools/tests",
    "../../packages/agents/destination/tests",
    "../../packages/agents/logistics/tests",
    "../../packages/agents/budget/tests",
    "../../packages/agents/synthesis/tests",
    "../../packages/agents/validator/tests",
    "../../packages/agents/repair/tests",
    "../../packages/memory/tests",
    "../../packages/reliability/tests",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "integration: hits real external APIs (skipped by default)",
    "eval: golden-set evaluation runs",
    "slow: tests that take more than a few seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
